StyleSheets/home.css
html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

body {
  background: repeating-linear-gradient(
    90deg,
    #f8eaef 0px,
    #f8eaef 20px,
    white 20px,
    white 40px
)
}


.booth {
    width: 500px;
    position: absolute;
    top: 0px;
    left: 400px;
}

.start {
    width: 100px;
    height: 50px;
    position: absolute;
    top: 630px;
    left: 650px;
    color: #f2cccc;
    -webkit-text-stroke: 1.5px #50433d;
    background-color:#e9e1e1;
    border: 2px solid #8b7d75;
    font-size: 15px;
    font-family: "starfont";
    border-radius: 50px;
}

.start:hover{
    background-color: #f6e2e2;
}

.start:hover ~ .sparkle{
    animation: sparkle-animation .5s ease-in-out infinite;
}

@font-face {
    font-family: "starfont";
    src: url("../Assets/starfont.otf") format("opentype");
}

.rabbit {
    position: absolute;
    top: 350px;
    left: 750px;
    pointer-events: none;
}


.sparkle {
    width: 30%;
    position: absolute;
    left: 26%;
    top: 10%;
}

@keyframes sparkle-animation {
  0%, 100% { transform: translateY(0px) rotate(0deg); }
  50% { transform: translateY(-4px) rotate(0.5deg); }
}


.title {
  position: absolute;
  top: 3%;
  left: 48%;
  transform: translateX(-50%);
  font-family: "starfont";
  font-size: 250%;
  color: #f2cccc;
  -webkit-text-stroke: 3.5px #50433d;
}

.title span {
  display: inline-block;
  animation: sparkle-animation 1.4s ease-in-out infinite;
  animation-delay: var(--delay);
}

.title span:nth-child(1) { --delay: -0.5s; }
.title span:nth-child(2) { --delay: -1.2s; }
.title span:nth-child(3) { --delay: -0.3s; }
.title span:nth-child(4) { --delay: -1.8s; }
.title span:nth-child(5) { --delay: -0.7s; }
.title span:nth-child(6) { --delay: -1.1s; }
.title span:nth-child(7) { --delay: -0.9s; }
.title span:nth-child(8) { --delay: -1.5s; }


.geekd{
    position: absolute;
    left: 60%;
    bottom: 50%  
}

.start:hover ~ .geekd {
    display:none;
}

.lockedin{
    display:none;
    position: absolute;
    left: 60%;
    bottom: 50%  
}
.start:hover ~ .lockedin {
    display:block;
}

@media (max-width: 600px) {
    html, body {
        overflow: auto;
    }

    .title {
        top: 10px;
        left: 50%;
        font-size: 200%;
    }

    /* scale factor: 300/500 = 0.6, booth starts below title (~70px) */
    .booth {
        width: 300px;
        top: 70px;
        left: 50%;
        transform: translateX(-50%);
    }

    .rabbit {
        top: 280px; /* 70 + 210 */
        left: calc(50% + 60px);
        max-width: 100px;
    }

    .start {
        top: 448px; /* 70 + 378 */
        left: 50%;
        transform: translateX(-50%);
    }

    .sparkle {
        width: 30%;
        left: 2%;
        top: 70px;
    }

    .geekd {
        display: none;
    }

    .lockedin {
        display: none;
    }
}

